# termind

./: .gitignore  Cargo.toml  FEATURES.md  LICENSE  PHASE_A_WEEK3_COMPLETE.md  PHASE_A_WEEK3_READY.md  PLAN.md  README.md  SUMMARY.md
examples/: block_demo.rs  context_demo.rs
src/: error.rs  lib.rs  main.rs  main_gpu.rs  main_pixels.rs
src/blocks/: context.rs  mod.rs
src/pty/: host.rs  lifecycle.rs  mod.rs  recovery.rs  signals.rs
src/renderer/: colors.rs  gpu.rs  grid.rs  mod.rs  parser.rs  software.rs
src/shaders/: text.wgsl
